# CodeLocalTest

./: README.md
CppWorkbench/TestRun/: CMakeLists.txt  Main.cpp
CppWorkbench/TestRun/ClassHolder/: CMakeLists.txt  TextBlock.cpp  TextBlock.h
CppWorkbench/TestRun/LogModule/: CMakeLists.txt  Log.cpp  Log.h
CppWorkbench/TestRun/TestModule/: CMakeLists.txt  Test.cpp  Test.h
